src/tests/errors/parsing/test02.cmp
program p 
begin  
    var    x := 4;  (* Semicolon is a separator, not a terminator *)
end  
